unpackaged/main/default/objects/Contact/fields/Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Account_Stage__c</fullName>
    <formula>Account.Stage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Stage</label>
    <type>Text</type>
</CustomField>