unpackaged/main/default/objects/Contact/fields/Agreed_To_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Agreed_To_Terms_Conditions__c</fullName>
    <label>Agreed To Terms &amp; Conditions</label>
    <type>DateTime</type>
</CustomField>