unpackaged/main/default/objects/Contact/fields/BCUserID__c.field-meta.xml
<CustomField>
    <fullName>BCUserID__c</fullName>
    <description>User ID from BC database</description>
    <externalId>true</externalId>
    <label>BCUserID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>