unpackaged/main/default/objects/Contact/fields/BDR_Added_to_Gong_Workflow__c.field-meta.xml
<CustomField>
    <fullName>BDR_Added_to_Gong_Workflow__c</fullName>
    <label>BDR Added to Gong Workflow</label>
    <type>DateTime</type>
</CustomField>