unpackaged/main/default/objects/Contact/fields/Cognism_Id__c.field-meta.xml
<CustomField>
    <fullName>Cognism_Id__c</fullName>
    <description>Unique identifier to the Cognism platform</description>
    <inlineHelpText>Unique identifier to the Cognism platform</inlineHelpText>
    <label>Cognism Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>