unpackaged/main/default/objects/Contact/fields/Company_Buying_Stage_6sense__c.field-meta.xml
<CustomField>
    <fullName>Company_Buying_Stage_6sense__c</fullName>
    <description>A measure of an account’s buying stage and likelihood of being in-market for a specific product or service, using relevant signals of interest and engagement across known and anonymous intent and engagement.</description>
    <inlineHelpText>A measure of an account’s buying stage and likelihood of being in-market for a specific product or service, using relevant signals of interest and engagement across known and anonymous intent and engagement.</inlineHelpText>
    <label>Company Buying Stage (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>