unpackaged/main/default/objects/Contact/fields/Company_Intent_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Company_Intent_Score_6sense__c</fullName>
    <label>Company Intent Score (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>