unpackaged/main/default/objects/Contact/fields/Company_Phone_6sense__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_6sense__c</fullName>
    <description>Company Phone (6sense)</description>
    <label>Company Phone (6sense)</label>
    <type>Phone</type>
</CustomField>