unpackaged/main/default/objects/Contact/fields/Company_Profile_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Company_Profile_Score_6sense__c</fullName>
    <description>Reflects how closely each company’s firmographic profiles resemble accounts with past and current opportunities.</description>
    <inlineHelpText>Reflects how closely each company’s firmographic profiles resemble accounts with past and current opportunities.</inlineHelpText>
    <label>Company Profile Score (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>