unpackaged/main/default/objects/Contact/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <label>Constituency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect / Customer</fullName>
                <default>true</default>
                <label>Prospect / Customer</label>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employee Affiliate</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Solution Partner</fullName>
            </value>
            <value>
                <fullName>Agency Partner</fullName>
            </value>
            <value>
                <fullName>Technology Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>