unpackaged/main/default/objects/Contact/fields/Country_6sense__c.field-meta.xml
<CustomField>
    <fullName>Country_6sense__c</fullName>
    <description>Country (6sense)</description>
    <label>Country (6sense)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>