unpackaged/main/default/objects/Contact/fields/CS_Contact_Notes__c.field-meta.xml
<CustomField>
    <fullName>CS_Contact_Notes__c</fullName>
    <label>CS Contact Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>