unpackaged/main/default/objects/Contact/fields/Days_Since_Last_Sales_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Sales_Activity__c</fullName>
    <formula>If (ISNULL(Last_Sales_Activity_Date__c), null , TODAY() - DATEVALUE(Last_Sales_Activity_Date__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Sales Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>