unpackaged/main/default/objects/Contact/fields/DE_Company_Name_1st_letter__c.field-meta.xml
<CustomField>
    <fullName>DE_Company_Name_1st_letter__c</fullName>
    <description>Used by Distribution Engine</description>
    <formula>UPPER( LEFT( TRIM( Account.Name  ),1) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - Company Name 1st letter</label>
    <type>Text</type>
</CustomField>