unpackaged/main/default/objects/Contact/fields/DE_DaysFromCreate__c.field-meta.xml
<CustomField>
    <fullName>DE_DaysFromCreate__c</fullName>
    <description>days from Creation</description>
    <formula>TODAY() - DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DE - DaysFromCreate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>