unpackaged/main/default/objects/Contact/fields/Do_Not_Receive_NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Receive_NPS_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <description>KM:  This contact should not receive the Brightcove NPS Survey.  This is for reps/AMs to manage their NPS contacts without having to remove them from a contact role or make them an invalid contact just so they won&#39;t receive the NPS email.</description>
    <inlineHelpText>Check this box if you do not want this contact to receive the NPS email.</inlineHelpText>
    <label>Do Not Receive NPS Survey</label>
    <type>Checkbox</type>
</CustomField>