unpackaged/main/default/objects/Contact/fields/Email_Address_Domain__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_Domain__c</fullName>
    <formula>RIGHT(Email, (LEN(Email)-FIND(&quot;@&quot;,Email)+1) )
/*RIGHT(Email,  FIND(&quot;@&quot;, Email)-1 )*/</formula>
    <label>Email Address Domain</label>
    <type>Text</type>
</CustomField>