unpackaged/main/default/objects/Contact/fields/Email_Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Validation_Status__c</fullName>
    <label>Email Validation Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>