unpackaged/main/default/objects/Contact/fields/Last_Partner_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Partner_Inquiry_Date__c</fullName>
    <label>Last Partner Inquiry Date</label>
    <type>Date</type>
</CustomField>