unpackaged/main/default/objects/Contact/fields/Last_Sales_Inquiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sales_Inquiry_Date__c</fullName>
    <description>The date of the most recent request to be contacted</description>
    <label>Last Sales Inquiry Date</label>
    <type>Date</type>
</CustomField>