unpackaged/main/default/objects/Contact/fields/LastName_JP__c.field-meta.xml
<CustomField>
    <fullName>LastName_JP__c</fullName>
    <formula>IF (  ISBLANK( LastNameLocal ) , &#39;お客&#39;, LastNameLocal )</formula>
    <label>LastName JP</label>
    <type>Text</type>
</CustomField>