unpackaged/main/default/objects/Contact/fields/LastName_KO__c.field-meta.xml
<CustomField>
    <fullName>LastName_KO__c</fullName>
    <formula>IF ( ISBLANK( LastNameLocal ) , &#39;고객님&#39;, LastNameLocal )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastName KO</label>
    <type>Text</type>
</CustomField>