unpackaged/main/default/objects/Contact/fields/Lead_Source_Latest__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Latest__c</fullName>
    <description>This most recent engagement for the lead.</description>
    <inlineHelpText>This most recent engagement for the lead.</inlineHelpText>
    <label>Lead Source - Latest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>CTV</fullName>
            </value>
            <value>
                <fullName>Direct Mail</fullName>
            </value>
            <value>
                <fullName>Direct Web Traffic</fullName>
            </value>
            <value>
                <fullName>Display Ad</fullName>
            </value>
            <value>
                <fullName>Drift</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Event (3rd Party)</fullName>
            </value>
            <value>
                <fullName>Event (BCOV)</fullName>
            </value>
            <value>
                <fullName>Incoming Call</fullName>
            </value>
            <value>
                <fullName>Online Meeting</fullName>
            </value>
            <value>
                <fullName>Organic Search</fullName>
            </value>
            <value>
                <fullName>Organic Social</fullName>
            </value>
            <value>
                <fullName>Outbound BDR</fullName>
            </value>
            <value>
                <fullName>Outbound Sales Rep</fullName>
            </value>
            <value>
                <fullName>Paid Social</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>PPC/SEM</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Virtual Event/Webinar (3rd Party)</fullName>
            </value>
            <value>
                <fullName>Virtual Event/Webinar (BCOV)</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>