unpackaged/main/default/objects/Contact/fields/Next_Selling_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Selling_Activity_Date__c</fullName>
    <label>Next Selling Activity Date</label>
    <type>Date</type>
</CustomField>