unpackaged/main/default/objects/Contact/fields/NPS_Rating_Change_Previous__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating_Change_Previous__c</fullName>
    <formula>IF
(
    AND
    (
        NPS_Rating_Latest__c &lt;&gt; 0 ,
        NPS_Rating_Previous__c &lt;&gt; 0 
    )
    ,
    ( NPS_Rating_Latest__c - NPS_Rating_Previous__c )
    ,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS Rating Change - Previous</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>