unpackaged/main/default/objects/Contact/fields/NPS_Rating_Date_Earliest__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating_Date_Earliest__c</fullName>
    <label>NPS Date - Earliest</label>
    <type>Date</type>
</CustomField>