unpackaged/main/default/objects/Contact/fields/NPS_Rating_Trend_Previous__c.field-meta.xml
<CustomField>
    <fullName>NPS_Rating_Trend_Previous__c</fullName>
    <formula>IF( ISNULL( NPS_Rating_Latest__c ) , &quot;None&quot;, 

   IF( AND( NOT(ISNULL(NPS_Rating_Latest__c)) , ISNULL(NPS_Rating_Previous__c) ), &quot;New&quot;, 

        IF( NPS_Rating_Latest__c &gt; NPS_Rating_Previous__c , &quot;Increasing&quot; , 

            IF( NPS_Rating_Latest__c &lt; NPS_Rating_Previous__c , &quot;Decreasing&quot;, 

                IF( NPS_Rating_Latest__c = NPS_Rating_Previous__c, &quot;Same&quot;, 

                    &quot;Unknown&quot; 
)
)
)
)
)</formula>
    <label>NPS Rating Trend - Previous</label>
    <type>Text</type>
</CustomField>