unpackaged/main/default/objects/Contact/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <description>Alternative phone #</description>
    <inlineHelpText>Alternative phone #</inlineHelpText>
    <label>Phone 2</label>
    <type>Phone</type>
</CustomField>