unpackaged/main/default/objects/Contact/fields/Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Portal_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked on, the contact is enabled for either the customer or the partner portal</description>
    <inlineHelpText>If checked on, the contact is enabled for either the customer or the partner portal</inlineHelpText>
    <label>Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>