unpackaged/main/default/objects/Contact/fields/Preferred_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Language__c</fullName>
    <description>used for the Gainsight integration SFDCHELP-356</description>
    <label>Preferred Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>