unpackaged/main/default/objects/Contact/fields/Profile_Event_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Profile_Event_Affiliation__c</fullName>
    <label>Profile - Event Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>