unpackaged/main/default/objects/Contact/fields/Profile_Events_Executed_Annually__c.field-meta.xml
<CustomField>
    <fullName>Profile_Events_Executed_Annually__c</fullName>
    <label>Profile - Events Executed Annually</label>
    <length>255</length>
    <type>Text</type>
</CustomField>