unpackaged/main/default/objects/Contact/fields/Profile_Score_6sense__c.field-meta.xml
<CustomField>
    <fullName>Profile_Score_6sense__c</fullName>
    <description>A measure of how similar a person is to your typical buyer or buying committee members for a given product or service, using demographic factors along with historical opportunity history.</description>
    <inlineHelpText>A measure of how similar a person is to your typical buyer or buying committee members for a given product or service, using demographic factors along with historical opportunity history.</inlineHelpText>
    <label>Profile Score (6sense)</label>
    <length>18</length>
    <type>Text</type>
</CustomField>