unpackaged/main/default/objects/Contact/fields/Referral_Contact__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral - Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Referral - Contact)</relationshipLabel>
    <relationshipName>Referral_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>