unpackaged/main/default/objects/Contact/fields/Response_Latest_Offer_Type__c.field-meta.xml
<CustomField>
    <fullName>Response_Latest_Offer_Type__c</fullName>
    <label>Response - Latest - Offer Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>